...

  Future<void> _showPassDialog(var context) async {
    return showDialog<void>(
        barrierDismissible: false, // user must tap button!
        builder: (BuildContext context) {
          return AlertDialog(
            key: Key('wrong-password'),
            title: Text('Wrong password!'),
            actions: [
              FlatButton(
                  key: Key('wrong-password-ok'),
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                  child: Text('OK'))
            ],
          );
...
                        color: Color(0xFFF3F3F3),
                        borderRadius: BorderRadius.circular(29),
                        border: Border.all(
                            color: _emptyMail ? Colors.red : customPurple),
                      ),
                      child: TextFormField(
                        //key: Key('mail-input'),
                        enabled: true,
                        controller: _mailController,
                        obscureText: false,
                        decoration: InputDecoration(
                          border: InputBorder.none,
                        ),
...
                        color: Color(0xFFF3F3F3),
                        borderRadius: BorderRadius.circular(29),
                        border: Border.all(
                            color: _emptyMail ? Colors.red : customPurple),
                      ),
                      child: TextFormField(
                        //key: Key('pass-input'),
                        enabled: true,
                        controller: _passwordController,
                        obscureText: true,
                        decoration: InputDecoration(
                          border: InputBorder.none,
                        ),
...
              title: _passReturn(),
            ),
            */
            Positioned(
                top: size.height * 0.83,
                child: FlatButton(
                    //key: Key('signInButton'),
                    padding: EdgeInsets.symmetric(
                        vertical: 10, horizontal: size.width * 0.07),
                    onPressed: () {
                      if (_mailController.text.isEmpty ||
                          _passwordController.text.isEmpty) {
                        _emptyPass = _passwordController.text.isEmpty;
...
