...
  Widget build(BuildContext context) {
    Size size = MediaQuery.of(context).size;
    return Scaffold(
        body: Form(
      key: _formKey,
      child: SingleChildScrollView(
        //key: Key('edit-scroll'),
        child: Container(
          height: size.height * 1.145,
          width: double.infinity,
          child: Stack(
            alignment: Alignment.center,
            children: <Widget>[
...
                          borderRadius: BorderRadius.circular(29),
                          border: Border.all(
                              color:
                                  isFirstNameEmpty ? Colors.red : customPurple),
                        ),
                        child: TextFormField(
                          // key: Key('first-name'),
                          enabled: true,
                          controller: _firstNameController,
                          obscureText: false,
                          decoration: InputDecoration(
                            border: InputBorder.none,
                          ),
...
                          borderRadius: BorderRadius.circular(29),
                          border: Border.all(
                              color:
                                  isLastNameEmpty ? Colors.red : customPurple),
                        ),
                        child: TextFormField(
                          //key: Key('last-name'),
                          enabled: true,
                          controller: _lastNameController,
                          obscureText: false,
                          decoration: InputDecoration(
                            border: InputBorder.none,
                          ),
...
                  decoration: BoxDecoration(
                    color: Color(0xFFF3F3F3),
                    borderRadius: BorderRadius.circular(29),
                    border: Border.all(color: customPurple),
                  ),
                  child: TextFormField(
                    // key: Key('about-input'),
                    controller: _aboutYController,
                    decoration: InputDecoration(
                      border: InputBorder.none,
                      contentPadding: EdgeInsets.symmetric(
                        horizontal: 0,
                        vertical: size.height * 0.014,
...
                  ),
                ),
              ),
              Positioned(
                top: size.height * 1.03,
                child: FlatButton(
                    //key: Key('update-button'),
                    padding: EdgeInsets.symmetric(
                        vertical: 10, horizontal: size.width * 0.07),
                    onPressed: () {
                      isFirstNameEmpty = _firstNameController.text.isEmpty;
                      isLastNameEmpty = _lastNameController.text.isEmpty;
                      isIbanEmpty = _ibanController.text.isEmpty;
...
