...
  Widget build(BuildContext context) {
    Size size = MediaQuery.of(context).size;
    return Scaffold(
        body: Form(
            key: _formKey,
            child: SingleChildScrollView(
                key: Key('add-scroll'),
                scrollDirection: Axis.vertical,
                child: Container(
                  height: size.height * 1.34,
                  width: double.infinity,
                  child: Stack(
                    alignment: Alignment.center,
...
                                  border: Border.all(
                                      color: isCourseNameEmpty
                                          ? Colors.red
                                          : customPurple),
                                ),
                                child: TextFormField(
                                  key: Key('course-name'),
                                  enabled: true,
                                  controller: _courseNameController,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    border: InputBorder.none,
                                  ),
...
                          decoration: BoxDecoration(
                            color: Color(0xFFF3F3F3),
                            borderRadius: BorderRadius.circular(29),
                            border: Border.all(color: customPurple),
                          ),
                          child: TextFormField(
                            key: Key('short-desc'),
                            controller: _shortDescriptionController,
                            decoration: InputDecoration(
                              border: InputBorder.none,
                              contentPadding: EdgeInsets.symmetric(
                                horizontal: 0,
                                vertical: size.height * 0.014,
...
                              borderRadius: BorderRadius.circular(29),
                              border: Border.all(
                                  color:
                                      isPriceEmpty ? Colors.red : customPurple),
                            ),
                            child: TextFormField(
                              key: Key('price'),
                              decoration: InputDecoration(
                                border: InputBorder.none,
                              ),
                              controller: _priceController,
                              keyboardType: TextInputType.number,
                              inputFormatters: <TextInputFormatter>[
...
                      ),
                      Positioned(
                        top: size.height * 1.23,
                        height: 50,
                        width: 300,
                        child: FlatButton(
                            key: Key('add-button'),
                            padding: EdgeInsets.symmetric(
                                vertical: 10, horizontal: size.width * 0.07),
                            onPressed: () async {
                              List<String> linkovi = [];
                              isCourseNameEmpty =
                                  _courseNameController.text.isEmpty;
...
